Updated config and scripts for docker 300